# Rust-Project2

./: .dockerignore  .env  Cargo.toml  DockerFile  Dockerfile
.github/workflows/: cicd.yaml
entity/: Cargo.toml
entity/src/: item.rs  product.rs
migration/src/: m20220101_000001_create_table.rs
src/: db.rs  lib.rs  main.rs
src/handlers/: item_handlers.rs  mod.rs  product_hanlers.rs
src/models/: item_model.rs  mod.rs  product_model.rs
src/repository/: item_repository.rs  product_repository.rs
src/routes/: item_routers.rs  mod.rs  product_routes.rs
src/service/: item_service.rs  product_service.rs
